# ultra-lang

./: CMakeLists.txt  README.md  build_debug.sh  build_release.sh  test.ultra
include/: generation.hpp  parser.hpp  tokenizer.hpp
src/: generation.cpp  main.cpp  parser.cpp  tokenizer.cpp
